test/corpus/comments.txt
===================================================================================================
Line comments
===================================================================================================

// simple line comment

function foo() { // comment after some code
    // comment inside function
}

// comment with // and even more ///////

---------------------------------------------------------------------------------------------------

(script
  (comment)
  (func_decl_stmt
    name: (ident)
    params: (func_params)
    definition: (func_block
      (comment)
      (comment)))
  (comment))





===================================================================================================
Block comments
===================================================================================================

/* simple block comment */

/****************** lots of stars *******************/

/***************************************************
/************* on multiple lines ******************/

/*
 * Another 
 * variant
 * of multiple lines
*/

class /* you get a comment */ Foo  /* and YOU get a comment */ {
    /* 
        comment 
        galore
    */
}


/***********************************************************************/
/** Witcher Script file
/***********************************************************************/
/** Copyright © 2011-2014
/** Author :
/***********************************************************************/

---------------------------------------------------------------------------------------------------

(script
  (comment)
    (comment)
    (comment)
    (comment)
    (class_decl_stmt
      (comment)
      name: (ident)
      (comment)
      definition: (class_block
        (comment)))
    (comment)
    (comment)
    (comment))
