test/corpus/expressions.txt
===================================================================================================
Identifiers and objects
===================================================================================================

function test() {
    myVar;
    var1;
    __asfs328afncaas1483aaaaaaaaazzzzzzzzz0000;
    null;
    this;
    super;
    parent;
    virtual_parent;
}

---------------------------------------------------------------------------------------------------

(module
  (func_decl_stmt
    flavour: (func_flavour_function)
    name: (ident)
    definition: (func_block
        (expr_stmt
          (ident))
        (expr_stmt
          (ident))
        (expr_stmt
          (ident))
        (expr_stmt
          (ident))
        (expr_stmt
          (this_expr))
        (expr_stmt
          (super_expr))
        (expr_stmt
          (parent_expr))
        (expr_stmt
          (virtual_parent_expr)))))





===================================================================================================
Unary operators
===================================================================================================

function test() {
    -a;
    !condition;
    ~number;
}

---------------------------------------------------------------------------------------------------

(module
  (func_decl_stmt
    flavour: (func_flavour_function)
    name: (ident)
    definition: (func_block
        (expr_stmt
          (unary_op_expr
            op: (unary_op_neg)
            right: (ident)))
        (expr_stmt
          (unary_op_expr
            op: (unary_op_not)
            right: (ident)))
        (expr_stmt
          (unary_op_expr
            op: (unary_op_bitnot)
            right: (ident))))))




===================================================================================================
Binary operators
===================================================================================================

function test() {
    a || b;
    a && b;
    a | b;
    a & b;
    a == b;
    a != b;
    a > b;
    a >= b;
    a < b;
    a <= b;
    a - b;
    a + b;
    a * b;
    a / b;
    a % b;
}

---------------------------------------------------------------------------------------------------

(module
  (func_decl_stmt
    flavour: (func_flavour_function)
    name: (ident)
    definition: (func_block
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_or)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_and)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_bitor)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_bitand)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_eq)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_neq)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_gt)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_ge)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_lt)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_le)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_diff)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_sum)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_mult)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_div)
            right: (ident)))
        (expr_stmt
          (binary_op_expr
            left: (ident)
            op: (binary_op_mod)
            right: (ident))))))





===================================================================================================
Assignment
===================================================================================================

function test() {
    a = "1";
    b += c;
    a -= b;
    a *= CONSTANT;
    a /= 2;
    dt %= 0.01667;
}

---------------------------------------------------------------------------------------------------

(module
  (func_decl_stmt
    flavour: (func_flavour_function)
    name: (ident)
    definition: (func_block
        (expr_stmt
          (assign_op_expr
            left: (ident)
            op: (assign_op_direct)
            right: (literal
              (literal_string))))
        (expr_stmt
          (assign_op_expr
            left: (ident)
            op: (assign_op_sum)
            right: (ident)))
        (expr_stmt
          (assign_op_expr
            left: (ident)
            op: (assign_op_diff)
            right: (ident)))
        (expr_stmt
          (assign_op_expr
            left: (ident)
            op: (assign_op_mult)
            right: (ident)))
        (expr_stmt
          (assign_op_expr
            left: (ident)
            op: (assign_op_div)
            right: (literal
              (literal_int))))
        (expr_stmt
          (assign_op_expr
            left: (ident)
            op: (assign_op_mod)
            right: (literal
              (literal_float)))))))





===================================================================================================
Others
===================================================================================================

function test() {
    (a);
    (Type)val;
    (((a)(b)));
    arr[i];
    func(1, "a",, true);
    thePlayer.inv;
    thePlayer.IsCiri(false);
    (Type)func(arg);
    isTrue ? true : getFalse();
}

---------------------------------------------------------------------------------------------------

(module
  (func_decl_stmt
    flavour: (func_flavour_function)
    name: (ident)
    definition: (func_block
        (expr_stmt
          (nested_expr
            (ident)))
        (expr_stmt
          (cast_expr
            type: (ident)
            value: (ident)))
        (expr_stmt 
          (nested_expr 
            (nested_expr 
              (cast_expr 
                type: (ident)
                value: (nested_expr 
                  (ident)))))) 
        (expr_stmt 
          (array_expr 
            accessor: (ident)
            index: (ident)))
        (expr_stmt 
          (func_call_expr 
            func: (ident)
            args: (func_call_args
              (literal 
                (literal_int))
              (literal 
                (literal_string))
              (literal 
                (literal_bool)))))
        (expr_stmt 
          (member_field_expr 
            accessor: (ident)
            member: (ident)))
        (expr_stmt 
          (member_func_call_expr 
            accessor: (ident)
            func: (ident)
            args: (func_call_args
              (literal 
                (literal_bool)))))
        (expr_stmt 
          (cast_expr 
            type: (ident)
            value: (func_call_expr 
              func: (ident)
              args: (func_call_args
                (ident)))))
        (expr_stmt 
          (ternary_cond_expr 
            cond: (ident)
            conseq: (literal 
              (literal_bool))
            alt: (func_call_expr 
              func: (ident)))))))




===================================================================================================
Precedence
===================================================================================================

function test() {
    a.b = x + y * z && p / -q;
}

---------------------------------------------------------------------------------------------------

(module
  (func_decl_stmt
    flavour: (func_flavour_function)
    name: (ident)
    definition: (func_block
        (expr_stmt
          (assign_op_expr
            left: (member_field_expr
              accessor: (ident)
              member: (ident))
            op: (assign_op_direct)
            right: (binary_op_expr
              left: (binary_op_expr
                left: (ident)
                op: (binary_op_sum)
                right: (binary_op_expr
                  left: (ident)
                  op: (binary_op_mult)
                  right: (ident)))
              op: (binary_op_and)
              right: (binary_op_expr
                left: (ident)
                op: (binary_op_div)
                right: (unary_op_expr
                  op: (unary_op_neg)
                  right: (ident)))))))))




===================================================================================================
Complex
===================================================================================================

function test() {
    ((CMovingPhysicalAgentComponent)((CNewNPC)results[i]).GetMovingAgentComponent()).SetAnimatedMovement( false );
}

---------------------------------------------------------------------------------------------------

(module
  (func_decl_stmt
    flavour: (func_flavour_function)
    name: (ident)
    definition: (func_block
        (expr_stmt
          (member_func_call_expr
            accessor: (nested_expr
              (cast_expr
                type: (ident)
                value: (member_func_call_expr
                  accessor: (nested_expr
                    (cast_expr
                      type: (ident)
                      value: (array_expr
                        accessor: (ident)
                        index: (ident))))
                  func: (ident))))
            func: (ident)
            args: (func_call_args
              (literal
                (literal_bool))))))))